# loom

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  migrator.sh
db/migrations/: 20251209234932_create_clients.sql  20251215174910_create_users.sql
db/seeds/: 2025-12-09_seed_clients.sql
src/: macros.rs  main.rs  state.rs
src/middleware/: logging.rs  mod.rs
src/repositories/: clients.rs  mod.rs  users.rs
src/routes/: authorize.rs  clients.rs  echo.rs  health.rs  mod.rs  token.rs  user.rs
src/services/: authorize.rs  cache.rs  client.rs  mod.rs  password.rs  token.rs  user.rs
