[package]
name = "c-oauth2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum  = { version = "0.7", features = ["macros","http1"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
cookie = "0.18"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.5", features = ["trace","limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
tracing-appender = "0.2"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros"] }
anyhow = "1"
base64 = "0.21"
rand = "0.8"
jsonwebtoken = "9"
time = "0.3"
argon2 = "0.5.3"
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }